--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "only",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "Gulpfile.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "gulp-babel": "^8.0.0",
     "gulp-cli": "^2.2.0",
     "gulp-cssnano": "^2.1.3",
+    "gulp-gzip": "^1.4.2",
     "gulp-sass": "^3.2.1",
     "gulp-uglify-es": "^1.0.4",
     "run-sequence": "^2.2.1"
